modal gap fix

--- a/src/components/Ui/popup/PopUp.module.css
+++ b/src/components/Ui/popup/PopUp.module.css
@@ -30,7 +30,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 20px;
   isolation: isolate;
 }
 
@@ -50,7 +50,6 @@
 .toolbarLayoutHeader {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 20px;
 }
 
 .toolbarLayoutTitleContainer {
